--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ branches:
   - master
 deploy:
   provider: pages
+  edge:
+    branch: pages-ivar-set
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
